--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     .controls{display:flex;gap:8px;margin-top:14px}
     button{border:0;padding:10px 14px;border-radius:10px;font-weight:600;cursor:pointer;background:#ef6c63;color:#fff}
     .choices{display:flex;gap:10px;margin-top:12px}
-    .choice-btn{padding:8px 14px;border-radius:8px;border:1px solid #ccc;background:#fafafa;cursor:pointer;font-weight:600}
+    .choice-btn{ color:black;padding:8px 14px;border-radius:8px;border:1px solid #ccc;background:#fafafa;cursor:pointer;font-weight:600}
     .result{margin-top:10px;font-weight:700;color:#ef6c63}
 
     /* Icon rơi */
