--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     .controls{display:flex;gap:8px;margin-top:14px}
     button{border:0;padding:10px 14px;border-radius:10px;font-weight:600;cursor:pointer;background:#ef6c63;color:#fff}
     .choices{display:flex;gap:10px;margin-top:12px}
-    .choice-btn{ color:black;padding:8px 14px;border-radius:8px;border:1px solid #ccc;background:#fafafa;cursor:pointer;font-weight:600}
+    .choice-btn{ color: green;padding:8px 14px;border-radius:8px;border:1px solid #ccc;background:#fafafa;cursor:pointer;font-weight:600}
     .result{margin-top:10px;font-weight:700;color:#ef6c63}
 
     /* Icon rơi */
@@ -33,7 +33,7 @@
 <body>
   <div class="wrap">
     <div class="card">
-      <div id="line" class="roast">Phước à, mày gay đúng không?</div>
+      <div id="line" class="roast">Bạn à, mày gay đúng không?</div>
 
       <div class="choices">
         <button class="choice-btn" id="yes">Có</button>
@@ -49,8 +49,8 @@
 
   <script>
     const lines = [
-      'Phước à, mày đúng không?',
-      'Phước ơi, hết thuốc chữa rồi!'
+      'Bạn à, mày gay đúng không?',
+      'Mày hết thuốc chữa rồi!'
     ];
 
     let idx = 0;
