--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
     });
 
     document.getElementById('yes').addEventListener('click', ()=>{
-      res.textContent = 'Phước trả lời: Có ✔️';
+      res.textContent = 'Bạn trả lời: Có ✔️';
     });
     document.getElementById('no').addEventListener('click', ()=>{
-      res.textContent = 'Phước trả lời: Có ✔️';
+      res.textContent = 'Bạn trả lời: Có ✔️';
     });
 
     // Hiệu ứng icon rơi
