--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Chửi Phước — Văn minh nhưng gắt</title>
+  <title>Gửi bạn — Thư Văn Minh!!!</title>
   <style>
     body{font-family:Inter, system-ui, sans-serif;background:#f5f5f5;margin:0;padding:40px;color:#1b1b1b;overflow:hidden}
     .wrap{max-width:820px;margin:0 auto;position:relative;z-index:2}
